--- a/README
+++ b/README
@@ -1,5 +1,5 @@
 
- OpenSSL 1.0.1k 8 Jan 2015
+ OpenSSL 1.0.1k 8 Jan 2015 - With SM3/4 and RSA_SM4_SM3 CipherSuite suport
 
  Copyright (c) 1998-2011 The OpenSSL Project
  Copyright (c) 1995-1998 Eric A. Young, Tim J. Hudson
